Set iframe width to 100% to prevent overflow in mobile

--- a/_sass/_mobile.scss
+++ b/_sass/_mobile.scss
@@ -44,6 +44,10 @@
         font-size: 20px;
     }
 
+    iframe {
+        width: 100%;
+    }
+
     .post-content p {
         font-size: 20px;
     }
